--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,7 @@ website:
     left: "Copyright 2024, Jakob Hoffmann" 
     right: 
       - icon: github
-        href: https://github.com/jfb-h
+        href: https://github.com/jfb-h/intro-to-sna
 
 
   sidebar:
